Remove old method no longer used.